--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
             <div class="tooltip">
                 <u>Hướng dẫn</u>
                 <div class="tooltip-text">
-                    Nhấn đúp: Tạo đỉnh, sửa tên cạnh, đỉnh<br>
+                    Nhấn chuột vào một đỉnh/cạnh: Chọn đỉnh/cạnh<br>
+                    Chọn đỉnh/cạnh > Nhấn Delete: Xóa đỉnh/cạnh<br>
+                    Nhấn đúp vào đỉnh/cạnh: Tạo đỉnh, sửa tên cạnh, đỉnh<br>
                     Nhấn chuột phải vào một đỉnh, kéo thả sang đỉnh khác: Tạo cạnh có hướng<br>
-                    Chọn đỉnh/cạnh > Nhấn Delete: Xóa<br>
                     Kéo thả tại đỉnh: Xắp xếp vị trí đỉnh<br>
                     Kéo thả tại khoảng không: Di chuyển đồ thị<br>
-                    Ctrl + Lăn chuột: Thu phóng
+                    Ctrl + Lăn chuột: Thu phóng đồ thị
                 </div>
             </div>
             <br>
